# sanic-restful-framework

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: .gitignore  README.md  mkdocs.yml  translate_docs.py
docs/source/en/: api-reference.md  config.md  features.md  index.md  release-notes.md
docs/source/en/usage/: getting-started.md  project-setup.md
docs/source/en/usage/advanced/: advanced-features.md  exceptions.md  health-check.md  http-status.md
docs/source/en/usage/core/: auth-permissions.md  authentication.md  filtering.md  pagination.md  permissions.md  routing.md  schema.md  social-login.md  viewset-actions.md  viewsets.md
docs/source/zh/: api-reference.md  config.md  features.md  index.md  release-notes.md
docs/source/zh/usage/: getting-started.md  project-setup.md
docs/source/zh/usage/advanced/: advanced-features.md  exceptions.md  health-check.md  (+1 more)
srf/: __init__.py  exceptions.py  paginator.py  route.py
srf/auth/: auth.py  models.py  route.py  schema.py  social_auth.py  viewset.py
srf/config/: __init__.py  settings.py
srf/event/: viewset.py
srf/filters/: filter.py
srf/health/: route.py
srf/middleware/: throttlemiddleware.py
srf/permission/: permission.py
srf/tools/: email.py  utils.py
srf/views/: __init__.py  base.py  decorators.py  http_status.py
tests/: conftest.py  test_auth.py  test_decorators.py  test_exceptions.py  test_filters.py  test_health.py  test_http_status.py  test_middleware.py  test_paginator.py  test_permission.py  test_route.py  test_tools_utils.py  test_views_base.py
(+16 files in other folders)
